# ea-appointment-reminders

./: .gitignore  Cargo.toml  README.md  reminders_config.example.toml
src/: main.rs
