[package]
name = "ea_appointment_reminders"
version = "1.1.0"
edition = "2021"
authors = ["Celeo <mattboulanger@fastmail.com>"]
description = "Appointment reminders for EasyAppointments"
readme = "README.md"
homepage = "https://github.com/celeo/ea_appointment_reminders"
repository = "https://github.com/celeo/ea_appointment_reminders"
documentation = "https://docs.rs/ea_appointment_reminders"
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = []
categories = []

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.12.1"
lettre = "0.11.6"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.2", features = ["json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
